--- a/sobremi.html
+++ b/sobremi.html
@@ -4,9 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./styles/aboutMe.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <title>About me</title>
 </head>
 <body>
-    <h1>Hola buenas</h1>
+    <header>
+        <h1>César Fontalvo</h1>
+        <a class="back-button" href="./index.html">
+            <i class='bx bx-arrow-back bx-md'></i>
+            <span>Volver</span>
+        </a>
+        <section class="header-about-me">
+            <h2>Hola!</h2>
+            <p>Mi nombre es César y soy porgramador frontend</p>
+            <p>Me apasiona aprender cada dia y programar</p>
+            <p>Suelo practicar piano e ir a gimnasio en mis tiempos libres</p>
+            <p>A continuacion te cuento mas sobre mi vida profesional</p>
+        </section>
+    </header>
+
+    <main>
+        <section>
+            <h2>Vida profesional</h2>
+            <p>Highly skilled and motivated React Developer with 1 year of experience in building web application using React.js, HTML, CSS and JavaScript. Passionate about creating elegant and efficient user interfaces and bringing complex design concepts to life. Skilled in write clean, maintainable and scalable code. Able to quickly learn new technologies and thrive in fast-paced environments..</p>
+                <p>I am a highly motivated and adaptable Mechanical Engineer with a strong passion for coding and front-end development. Recognizing the rapid growth and demand in the software industry, I am currently seeking my first job as a React Developer, where I can apply my problem-solving skills and technical expertise to create intuitive and user-friendly web applications.</p>
+                <p>With a solid foundation in engineering principles and analytical thinking, I possess a strong aptitude for understanding complex systems and finding innovative solutions. My experience in mechanical engineering has equipped me with a meticulous attention to detail, excellent time management, and the ability to work effectively in a team-based environment.</p>
+                <p>To facilitate my transition into the world of software development, I have dedicated extensive personal time to mastering React, a leading JavaScript library for building user interfaces. Through self-directed learning and practical projects, I have developed a comprehensive understanding of React's core concepts, including components, state management, and lifecycle methods. Additionally, I have honed my skills in HTML, CSS, and JavaScript, enabling me to create responsive and visually appealing websites.</p>
+        </section>
+        <section>
+            <h2>Skills</h2>
+            <p>Build websites using HTML, CSS and JavaScript. Also, proficiency in using Git for version control and collaboration</p>
+        </section>
+        <section>
+            <h2>Vida profesional</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui ad debitis quis enim iste amet odit, ipsum ducimus minus explicabo est quia eaque, culpa officiis, obcaecati dolore tempore illum vel.</p>
+        </section>
+    </main>
+
 </body>
 </html>
