--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;1,400&family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css">
-    <title>Document</title>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <title>My CV</title>
 </head>
 <body>
     <header>
@@ -17,20 +18,23 @@
         <h1>CURRICULUM VITAE DE CESAR FONTALVO</h1>
     </header>
     <main>
-        <section>
-            <article>
-                <a href="./sobremi.html">Sobre mi!</a>
-            </article>
+        <section class="aboutme-button">
+                <a class="action-button" href="./sobremi.html"><i class='bx bxs-contact'></i>Sobre mi!</a>
+                <a class="action-button" href="#datos-personales"><i class='bx bx-info-circle'></i>Datos Personales</a>
+                <a class="action-button" href="#formacion"><i class='bx bxs-graduation' ></i>Formacion academica</a>
+                <a class="action-button" href="#experiencia"><i class='bx bxs-briefcase-alt' ></i>Experiencia</a>
         </section>
-        <section>
+        <section id="datos-personales">
             <h2>DATOS PERSONALES</h2>
             <ul>
                 <li><span>Nombre completo:</span> César Fontalvo</li>
                 <li><span>Fecha de nacimiento:</span> 30/04/1997</li>
                 <li><span>Lugar de nacimiento:</span> Barranquilla</li>
+                <li><span>Telefono:</span> 3005557777</li>
+                <li><span>Direccion:</span> Calle falsa 123</li>
             </ul>
         </section>
-        <section>
+        <section id="formacion">
             <h2>FORMACIÓN ACADÉMICA</h2>
             <dl>
                 <dt>1956-1961: </dt>
@@ -42,8 +46,18 @@
                 <dd>Secundario Gotham</dd>
                 <dd>Bachiller con especialización en codigo?</dd>
               </dl>
+            <dl>
+                <dt>1952-1956: </dt>
+                <dd>Secundario Gotham</dd>
+                <dd>Bachiller con especialización en codigo?</dd>
+              </dl>
+            <dl>
+                <dt>1952-1956: </dt>
+                <dd>Secundario Gotham</dd>
+                <dd>Bachiller con especialización en codigo?</dd>
+              </dl>
         </section>
-        <section>
+        <section id="experiencia">
             <h2>EXPERIENCIA LABORAL</h2>
             <dl>
                 <dt>1975-1985:</dt>
@@ -60,13 +74,24 @@
                 <dd>Aprendiz de superhéroes</dd>
                 <dd>Hice pasantía con Superman. Opté por usar mascara porque no pude aprender a peinarme el rulo</dd>
               </dl>
+            <dl>
+                <dt>1962-1965: </dt>
+                <dd>Aprendiz de superhéroes</dd>
+                <dd>Hice pasantía con Superman. Opté por usar mascara porque no pude aprender a peinarme el rulo</dd>
+              </dl>
+            <dl>
+                <dt>1962-1965: </dt>
+                <dd>Aprendiz de superhéroes</dd>
+                <dd>Hice pasantía con Superman. Opté por usar mascara porque no pude aprender a peinarme el rulo</dd>
+              </dl>
         </section>
     </main>
     <footer>
-        <p>0810 - BATMAN</p>
-        <a href="#"><img src="./img/ico_instagram.png" alt="Instagram"></a>
-        <a href="#"><img src="./img/ico_linkedin.png" alt="Linkedin"></a>
-        <i class="fa-brands fa-github"></i>
+        <p>César Fontalvo C</p>
+        <i class='bx bxl-instagram bx-md' ></i>
+        <i class='bx bxl-linkedin bx-md' ></i>
+        <i class='bx bxl-github bx-md' ></i>
     </footer>
+    <!-- <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script> -->
 </body>
 </html>
